- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    Qt Creator 3.4.2, Qt Creator 3.5.0-beta1, Qt Creator 3.5.0-rc1, Qt Creator 3.5.0
- 
    None
- 
    Window 7 x64
- 
        45778539d8424a8556ce074020b992a248d6455f
When right clicking on a switch statement with an empty case in its body Qt Creator will crash. The below code demonstrates this:
void test(Qt::Orientation o)
{
    switch (o)
    {
    case 
    }
}
Right clicking on switch with the above code will always reproduce the crash. I can reproduce this in 3.4.2 and 3.5.0 beta 1
I have generated a stack trace of the crash from a local build of 3.4.2 which is attached.